style.css
/* MEYER RESET (to fix issues with space at top of page, etc.)
http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* END OF RESET */

#container {
	height: 100%;
	width: 100%;
}
#sidebar {
	position: fixed;
	width: 100px;
	top:0;
	left:0;
	padding: 20px 20px 20px 20px;
	background-color: #03899C;
	font-size: 20px;
	font-weight: lighter;
	text-align: center;
	opacity: 0.6;
	text-transform: lowercase;

}

#content {
	position: absolute;
	margin-left: 140px;
	width: 600px;
	padding: 10px 20px 0px 20px;
	height: 100%;
}

body {
	font-family: "Source Sans Pro", "Trebuchet MS", Helvetica, sans-serif;
	font-size: 20px;
	color: #FFD373;
	background-color: #DFF0EC;
	background-image: url('kayaking-cropped.jpg');
	background-size: cover;
	background-repeat: no-repeat;
	line-height: 1.4;
}

h1 {
	text-align: center;
	font-size: 70px;
	text-transform: lowercase;
	color: #DFF0EC;
	font-weight: lighter;
}

h2 {
	font-weight: bold;
	font-size: 30px;

}

h3 {
	font-style: italic;
	font-size: 24px;
}

img {
	padding: 10px;
}
a {
	color: #DFF0EC;
	text-decoration: none;
}

a:hover {
	font-weight: bolder;
}

#sidebar a {
	color: #FFFFFF;
}

.rounded {
	border-radius: 15px;
}

.float {
	float: left;
	margin: 5px 10px;
}

.transparent {
	opacity: 0.8;
}

.imglink a {
	opacity: 0.7;
}

.imglink a:hover {
	opacity: 1;
}

.articletitle {
	text-decoration: underline;
}

.contentsection {
	padding: 15px;
}

.line-divider {
	border-top-width: 5px;
	border-style: solid;
	border-color: #DFF0EC;
	margin: 15px 0px 0px 0px;
}

